service 코드 개선
