# src/users/users.controller.ts
@@ -1,7 +1,10 @@
-import { LoginTryCatch } from './../common/response/try-catch/try-catch.response';
+import {
+  FindByEmailValueError,
+  LoginTryCatch,
+  LoginValueError,
+} from './../common/response/try-catch/try-catch.response';
 import { I_USERS_SERVICE } from './../common/constants/service/service-interface.constant';
 import { FindByIdTryCatch, JoinTryCatch, JoinValueError } from '../common/response/try-catch/try-catch.response';
-import { FIND_BY_ID_ERROR, LOGIN_ERROR } from '../common/response/error/user-error.response';
 import { AuthUser } from './../libs/auth/auth-user.decorator';
 import { TypedBody, TypedRoute } from '@nestia/core';
 import { Controller, Inject } from '@nestjs/common';
@@ -15,22 +18,40 @@ import { User } from '@prisma/client';
 export class UsersController {
   constructor(@Inject(I_USERS_SERVICE) private readonly usersService: IUsersService) {}
 
+  /**
+   * * 유저 아이디로 유저 찾기
+   * @param authUser 유저 아이디
+   * @returns 유저 정보
+   *
+   * @tag User
+   * @summary 유저 아이디로 유저 찾기 API (로그인 필요)
+   */
   @TypedRoute.Post('owner')
-  async findById(
-    @AuthUser() authUser: User,
-  ): Promise<FindByIdTryCatch<IFindByIdOutput, typeof FIND_BY_ID_ERROR.NOT_FOUND_USER>> {
+  async findById(@AuthUser() authUser: User): Promise<FindByIdTryCatch<IFindByIdOutput, FindByEmailValueError>> {
     return this.usersService.findById({ userId: authUser.id });
   }
 
+  /**
+   * * 로그인
+   * @param loginInput 로그인 정보
+   * @returns 로그인 결과
+   *
+   * @tag User
+   * @summary 로그인 API
+   */
   @TypedRoute.Post('login')
-  async login(
-    @TypedBody() loginInput: ILoginInput,
-  ): Promise<
-    LoginTryCatch<ILoginOutputData, typeof LOGIN_ERROR.ALREADY_EXIST_USER | typeof LOGIN_ERROR.IS_NOT_VALID_PASSWORD>
-  > {
+  async login(@TypedBody() loginInput: ILoginInput): Promise<LoginTryCatch<ILoginOutputData, LoginValueError>> {
     return this.usersService.login(loginInput);
   }
 
+  /**
+   * * 회원가입
+   * @param joinInput 가입 정보
+   * @returns 가입 결과
+   *
+   * @tag User
+   * @summary 회원가입 API
+   */
   @TypedRoute.Post('join')
   async join(@TypedBody() joinInput: IJoinInput): Promise<JoinTryCatch<null, JoinValueError>> {
     return this.usersService.join(joinInput);
