# swagger.json
@@ -39,11 +39,13 @@
     },
     "/users/owner": {
       "post": {
-        "tags": [],
+        "tags": [
+          "User"
+        ],
         "parameters": [],
         "responses": {
           "201": {
-            "description": "",
+            "description": "유저 정보",
             "content": {
               "application/json": {
                 "schema": {
@@ -54,17 +56,66 @@
             "x-nestia-encrypted": false
           }
         },
+        "summary": "유저 아이디로 유저 찾기 API (로그인 필요)",
+        "description": "* 유저 아이디로 유저 찾기",
         "x-nestia-namespace": "users.owner.findById",
-        "x-nestia-jsDocTags": [],
+        "x-nestia-jsDocTags": [
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "authUser",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "유저 아이디",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns",
+            "text": [
+              {
+                "text": "유저 정보",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "tag",
+            "text": [
+              {
+                "text": "User",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "summary",
+            "text": [
+              {
+                "text": "유저 아이디로 유저 찾기 API (로그인 필요)",
+                "kind": "text"
+              }
+            ]
+          }
+        ],
         "x-nestia-method": "POST"
       }
     },
     "/users/login": {
       "post": {
-        "tags": [],
+        "tags": [
+          "User"
+        ],
         "parameters": [],
         "requestBody": {
-          "description": "",
+          "description": "로그인 정보",
           "content": {
             "application/json": {
               "schema": {
@@ -77,7 +128,7 @@
         },
         "responses": {
           "201": {
-            "description": "",
+            "description": "로그인 결과",
             "content": {
               "application/json": {
                 "schema": {
@@ -88,17 +139,66 @@
             "x-nestia-encrypted": false
           }
         },
+        "summary": "로그인 API",
+        "description": "* 로그인",
         "x-nestia-namespace": "users.login.login",
-        "x-nestia-jsDocTags": [],
+        "x-nestia-jsDocTags": [
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "loginInput",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "로그인 정보",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns",
+            "text": [
+              {
+                "text": "로그인 결과",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "tag",
+            "text": [
+              {
+                "text": "User",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "summary",
+            "text": [
+              {
+                "text": "로그인 API",
+                "kind": "text"
+              }
+            ]
+          }
+        ],
         "x-nestia-method": "POST"
       }
     },
     "/users/join": {
       "post": {
-        "tags": [],
+        "tags": [
+          "User"
+        ],
         "parameters": [],
         "requestBody": {
-          "description": "",
+          "description": "가입 정보",
           "content": {
             "application/json": {
               "schema": {
@@ -111,7 +211,7 @@
         },
         "responses": {
           "201": {
-            "description": "",
+            "description": "가입 결과",
             "content": {
               "application/json": {
                 "schema": {
@@ -122,8 +222,55 @@
             "x-nestia-encrypted": false
           }
         },
+        "summary": "회원가입 API",
+        "description": "* 회원가입",
         "x-nestia-namespace": "users.join.join",
-        "x-nestia-jsDocTags": [],
+        "x-nestia-jsDocTags": [
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "joinInput",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "가입 정보",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns",
+            "text": [
+              {
+                "text": "가입 결과",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "tag",
+            "text": [
+              {
+                "text": "User",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "summary",
+            "text": [
+              {
+                "text": "회원가입 API",
+                "kind": "text"
+              }
+            ]
+          }
+        ],
         "x-nestia-method": "POST"
       }
     }
